Add manifest and splash screens for PWA

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,11 +4,35 @@
 	<title>{{.Labels.titleWebPage}}</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="theme-color" content="#f19842"/>
 	<link rel="stylesheet" type="text/css" href="/static/global.css?12">
 	<link rel="stylesheet" type="text/css" href="/static/tasks.css?19">
 	<link rel="stylesheet" type="text/css" href="/static/libs/jquery-ui.min.css">
 	<link rel="icon" type="image/png" href="/static/favicon.png">
 	<link rel="apple-touch-icon" type="image/png" href="/static/faviphone.png">
+	<link rel="apple-touch-startup-image" type="image/png" href="/static/faviphone.png">
+	<link rel="manifest" href="/static/manifest.json">
+	<link rel="apple-touch-startup-image" href="/static/splash/2048x2732.png" media="(min-device-width: 929px) and (max-device-width: 1280px) and (min-device-height: 1280px) and (max-device-height: 1708px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1668x2388.png" media="(min-device-width: 801px) and (max-device-width: 834px) and (min-device-height: 1153px) and (max-device-height: 1280px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1668x2224.png" media="(min-device-width: 801px) and (max-device-width: 834px) and (min-device-height: 1068px) and (max-device-height: 1153px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1536x2048.png" media="(min-device-width: 591px) and (max-device-width: 801px) and (min-device-height: 960px) and (max-device-height: 1068px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1242x2688.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 854px) and (max-device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1242x2208.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 702px) and (max-device-height: 774px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1125x2436.png" media="(min-device-width: 348px) and (max-device-width: 375px) and (min-device-height: 774px) and (max-device-height: 854px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/828x1792.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 854px) and (max-device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/750x1334.png" media="(min-device-width: 348px) and (max-device-width: 375px) and (min-device-height: 618px) and (max-device-height: 702px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/640x1136.png" media="(min-device-width: 160px) and (max-device-width: 348px) and (min-device-height: 284px) and (max-device-height: 618px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2732x2048.png" media="(min-device-width: 929px) and (max-device-width: 1280px) and (min-device-height: 1280px) and (max-device-height: 1708px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2388x1668.png" media="(min-device-width: 801px) and (max-device-width: 834px) and (min-device-height: 1153px) and (max-device-height: 1280px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2224x1668.png" media="(min-device-width: 801px) and (max-device-width: 834px) and (min-device-height: 1068px) and (max-device-height: 1153px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2048x1536.png" media="(min-device-width: 591px) and (max-device-width: 801px) and (min-device-height: 960px) and (max-device-height: 1068px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2688x1242.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 854px) and (max-device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2208x1242.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 702px) and (max-device-height: 774px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/2436x1125.png" media="(min-device-width: 348px) and (max-device-width: 375px) and (min-device-height: 774px) and (max-device-height: 854px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1792x828.png" media="(min-device-width: 395px) and (max-device-width: 414px) and (min-device-height: 854px) and (max-device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1334x750.png" media="(min-device-width: 348px) and (max-device-width: 375px) and (min-device-height: 618px) and (max-device-height: 702px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+	<link rel="apple-touch-startup-image" href="/static/splash/1136x640.png" media="(min-device-width: 160px) and (max-device-width: 348px) and (min-device-height: 284px) and (max-device-height: 618px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
 	<script src="/static/libs/jquery-3.3.1.min.js"></script>
 	<script src="/static/libs/jquery-ui.min.js"></script>
 	<script src="/static/libs/jquery.ui.touch-punch.min.js"></script>
