Fixed some Lighthouse issues

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="theme-color" content="#f19842"/>
+	<meta name="description" content="{{.Labels.descriptionWebPage}}">
 	<link rel="stylesheet" type="text/css" href="/static/global.css?12">
 	<link rel="stylesheet" type="text/css" href="/static/tasks.css?19">
 	<link rel="stylesheet" type="text/css" href="/static/libs/jquery-ui.min.css">
@@ -221,7 +222,7 @@
 		</section>
 	</main>
 	<footer>
-		<a href="https://github.com/st-korn/KornToDoList" target="_blank">{{.Labels.labelDeveloperPortal}}</a>
+		<a href="https://github.com/st-korn/KornToDoList" target="_blank" rel="noreferrer">{{.Labels.labelDeveloperPortal}}</a>
 	</footer>
 </body>
 </html>
